internal/compiler/testdata/fuzz/crashers/0275ac9701be2d8117cdee25ae8f269ced8367db.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x1141232]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c300, 0x0, 0x10f988e, 0xc000110200, 0x2, 0x1)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileResultColumn(0xc00000c300, 0xc00005a240, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x10, 0x11a9640)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:228 +0x221
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreSelect(0xc00000c300, 0xc000122280, 0x100b456, 0xc00002ac80, 0x40, 0x38)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:142 +0xf1
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc00000c300, 0xc000122280, 0x0, 0xc000104c60, 0x1010f93, 0xc00002ac80)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:117 +0x129
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00000c300, 0xc000120140, 0x0, 0x2, 0xc0000163a3, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00000c300, 0xc00011e300, 0x0, 0x2, 0xc0000163a3, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7e
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00000c300, 0xc00011e300, 0x0, 0x0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x9361000, 0xd, 0xd, 0x3)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc000104f70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2